--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
       - name: Prepare env
-        run: cp .env.example .env
+        run: |
+          cat > .env <<'EOF'
+          POSTGRES_DB=appdb
+          POSTGRES_USER=app_user
+          POSTGRES_PASSWORD=app_pass
+          POSTGRES_HOST=db
+          POSTGRES_PORT=5432
+          EOF
 
       - name: Build images
         run: docker compose build
@@ -24,24 +28,22 @@ jobs:
       - name: Start stack
         run: docker compose up -d
 
-      - name: Wait for API
+      - name: Wait for Nginx -> API health
         run: |
           for i in {1..30}; do
-            if curl -fsS http://localhost:8000/health >/dev/null; then
-              echo "API is up"
+            if curl -fsS http://localhost:8080/health >/dev/null; then
+              echo "OK"
               exit 0
             fi
             sleep 2
           done
-          echo "API did not start in time"
-          docker compose ps
-          docker compose logs --no-color
+          echo "Health check failed"
           exit 1
 
-      - name: Create task
+      - name: Create task via Nginx
         id: create
         run: |
-          RESP=$(curl -fsS -X POST http://localhost:8000/tasks \
+          RESP=$(curl -fsS -X POST http://localhost:8080/tasks \
             -H "Content-Type: application/json" \
             -d '{"text":"ci test"}')
           echo "$RESP"
@@ -50,15 +52,15 @@ jobs:
             print(json.loads(sys.stdin.read())["task_id"])
             PY
             <<< "$RESP")
-          echo "task_id=$TASK_ID" >> $GITHUB_OUTPUT
+                    echo "task_id=$TASK_ID" >> $GITHUB_OUTPUT
 
-      - name: Wait worker and check status
-        run: |
-          TASK_ID="${{ steps.create.outputs.task_id }}"
-          for i in {1..20}; do
-            RESP=$(curl -fsS "http://localhost:8000/tasks/$TASK_ID")
-            echo "$RESP"
-            STATUS=$(python - <<'PY'
+                - name: Wait worker and check done
+                    run: |
+                    TASK_ID="${{ steps.create.outputs.task_id }}"
+                    for i in {1..20}; do
+                        RESP=$(curl -fsS "http://localhost:8080/tasks/$TASK_ID")
+                        echo "$RESP"
+                        STATUS=$(python - <<'PY'
             import json,sys
             print(json.loads(sys.stdin.read())["status"])
             PY
@@ -69,10 +71,14 @@ jobs:
                         fi
                         sleep 2
                     done
-                    echo "Task was not done in time"
+                    echo "Task not done in time"
                     exit 1
 
-                - name: Show logs
+                - name: Logs (db)
+                    if: always()
+                    run: docker compose logs --no-color db
+
+                - name: Logs (all)
                     if: always()
                     run: docker compose logs --no-color
 
