Fix CD with PAT

--- a/.github/workflows/cd-deploy.yml
+++ b/.github/workflows/cd-deploy.yml
@@ -1,29 +1,54 @@
-name: CD - Deploy on VPS
+name: CD - Deploy to VPS (self-hosted)
 
 on:
-  workflow_run:
-    workflows: ["CI - Build & Push images to GHCR"]
-    types: [completed]
+  push:
+    branches: ["main"]
 
 permissions:
   contents: read
   packages: read
 
 env:
+  OWNER: zamasulolmeme123
+  IMAGE_REPO: task-url-platform
   TAG: sha-${{ github.sha }}
   DEPLOY_DIR: /home/roman/projects/Task-URL-Platform
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: [self-hosted, vps]
+    runs-on: self-hosted
     steps:
+      - name: Show tag
+        run: echo "Deploying ${TAG}"
+
       - name: Login to GHCR
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
-      - name: Pull & Up
+      - name: Pull images
         run: |
           cd "${DEPLOY_DIR}"
-          IMAGE_TAG="sha-${{ github.event.workflow_run.head_sha }}" docker compose -f docker-compose.prod.yml --env-file .env pull
-          IMAGE_TAG="sha-${{ github.event.workflow_run.head_sha }}" docker compose -f docker-compose.prod.yml --env-file .env up -d
-          curl -fsS http://localhost:8080/health
+          IMAGE_TAG="${TAG}" docker compose -f docker-compose.prod.yml --env-file .env pull
+
+      - name: Up + restart nginx
+        run: |
+          cd "${DEPLOY_DIR}"
+          IMAGE_TAG="${TAG}" docker compose -f docker-compose.prod.yml --env-file .env up -d
+          IMAGE_TAG="${TAG}" docker compose -f docker-compose.prod.yml --env-file .env restart nginx
+
+      - name: Healthcheck wait
+        run: |
+          for i in $(seq 1 30); do
+            code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/health || true)
+            if [ "$code" = "200" ]; then
+              echo "health OK"
+              exit 0
+            fi
+            echo "waiting health... ($i/30), http=$code"
+            sleep 2
+          done
+
+          echo "health FAILED"
+          cd "${DEPLOY_DIR}"
+          docker compose -f docker-compose.prod.yml --env-file .env ps
+          docker compose -f docker-compose.prod.yml --env-file .env logs --tail=200 nginx api worker
+          exit 1
