--- a/.github/workflows/ci-ghcr.yml
+++ b/.github/workflows/ci-ghcr.yml
@@ -1,4 +1,4 @@
-name: CI - Build & Push images to GHCR
+name: CI - Build & Push (multi-arch)
 
 on:
   push:
@@ -19,15 +19,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+
       - name: Login to GHCR
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & push API
-        run: |
-          docker build -t ghcr.io/${OWNER}/${IMAGE_REPO}/api:${TAG} ./api
-          docker push ghcr.io/${OWNER}/${IMAGE_REPO}/api:${TAG}
+        uses: docker/build-push-action@v6
+        with:
+          context: ./api
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ghcr.io/${{ env.OWNER }}/${{ env.IMAGE_REPO }}/api:${{ env.TAG }}
 
       - name: Build & push Worker
-        run: |
-          docker build -t ghcr.io/${OWNER}/${IMAGE_REPO}/worker:${TAG} ./worker
-          docker push ghcr.io/${OWNER}/${IMAGE_REPO}/worker:${TAG}
+        uses: docker/build-push-action@v6
+        with:
+          context: ./worker
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ghcr.io/${{ env.OWNER }}/${{ env.IMAGE_REPO }}/worker:${{ env.TAG }}
