--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,14 @@
+resolver 127.0.0.11 valid=10s ipv6=off;
+
 server {
   listen 80;
 
   location / {
-    proxy_pass http://api:8000;
+    set $upstream api:8000;
+    proxy_pass http://$upstream;
+
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Real-IP $remote_addr;
   }
 }
